social media links now collapse correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@ body {
 }
 .social {
   display: flex;
-  margin-left: 70%;
 }
 /* 
 ********
